css/custom.css
/* ... */
#main {
  height: 52rem;
}

@media (min-width: 576px) {
  header {
    position: relative;
    bottom: 66px;
  }
  .navbar-nav .nav-link {
    margin-right: 35px;
    margin-left: 35px;
  }
  .navbar-nav.ml-auto {
    height: 100% !important;
    line-height: 65px !important;
  }
  .collapse .navbar-collapse {
    height: 80px;
  }
  .loginBtn {
    margin-left: 1rem;
  }
  .mainButtons {
    margin-top: 3rem;
  }
  .switch {
    background-image: url(../img/switchIcon.svg);
    position: absolute;
    margin: 0 auto;
    height: 70px;
    width: 50px;
    background-size: cover;
    background-repeat: no-repeat;
    left: 50%;
    top: 44rem;
  }
  .switchInner {
    background-image: url(../img/switchInner.svg);
    position: absolute;
    margin: 0 auto;
    height: 70px;
    width: 50px;
    background-size: cover;
    background-repeat: no-repeat;
    left: 50%;
    top: 44rem;
    -webkit-transition: 0.6s;
    transition: 0.6s;
    -webkit-animation: MoveUpDown 1.7s linear infinite;
    animation: MoveUpDown 1.7s linear infinite;
  }
}

@-webkit-keyframes MoveUpDown {
  from {
    -webkit-transform: translateY(0px);
    transform: translateY(0px);
    opacity: 1;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
  }
  to {
    -webkit-transform: translateY(30px);
    transform: translateY(30px);
    opacity: 0;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
  }
}

@keyframes MoveUpDown {
  from {
    -webkit-transform: translateY(0px);
    transform: translateY(0px);
    opacity: 1;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
  }
  to {
    -webkit-transform: translateY(30px);
    transform: translateY(30px);
    opacity: 0;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
  }
}

.card {
  z-index: 0;
  min-height: 540px;
}

.card img {
  position: relative;
  z-index: -1;
}

.card1Text {
  color: white;
  position: absolute;
  top: 24%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  font-size: 35.2px;
  font-size: 3.5rem;
  font-family: Eboracum;
}
.card2Text {
  color: white;
  position: absolute;
  top: 25%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  font-size: 35.2px;
  font-size: 2.2rem;
  font-family: Eboracum;
}

.card3Text {
  color: white;
  position: absolute;
  top: 23%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  font-size: 35.2px;
  font-size: 2.2rem;
  font-family: Eboracum;
}

.middleImg {
  background-image: -webkit-gradient(
    linear,
    left bottom,
    left top,
    color-stop(35%, transparent),
    to(#191919)
  );
  background-image: -webkit-linear-gradient(
    bottom,
    transparent 35%,
    #191919 100%
  );
  background-image: linear-gradient(to top, transparent 35%, #191919 100%);
}

.display-3 {
  font-size: 64px !important;
  font-size: 4rem !important;
  text-shadow: 5px 5px 20px #000;
}

.headerComment {
  font-size: 19.2px !important;
  font-size: 1.2rem !important;
  text-shadow: 2px 2px 10px #000;
}

.card.mb-2 {
  border: 5px solid lightgray !important;
}

#section2 {
  background: #212121;
  background-image: url(../img/mecellemnedir.svg);
  background-position: right top;
  background-repeat: no-repeat;
  background-size: auto;
  height: auto;
  min-height: 60rem;
}

#whymecellem {
  background: #212121;
  background-image: url(../img/nedenmecellem.svg);
  background-position: left bottom;
  background-repeat: no-repeat;
  background-size: auto;
  height: auto;
  min-height: 60rem;
}

.image-widescreen {
  border: 1px solid red;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  min-height: 330px;
  max-height: 330px;
  overflow-y: hidden;
}

#section3 {
  background: #212121;
  color: white;
}

.card {
  color: gray;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  overflow: hidden;
  border: 5px solid lightgray !important;
  border-radius: 1.25rem !important;
}

.swiper-slide.swiper-slide-active .card:hover {
  -webkit-transition: 0.5s;
  transition: 0.5s;
  box-shadow: 0 0 4pt 3pt orange;
}

.card img {
  height: 250px;
  -webkit-transform: scaleX(2);
  transform: scaleX(2);
}

/* FORM */

#success-message {
  opacity: 0;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
}

.col-xs-12.col-sm-12.col-md-12.col-lg-12 {
  padding: 0 20% 0 20%;
}

.margin-top-25 {
  margin-top: 25px;
}

.form-title {
  padding: 25px;
  font-size: 30px;
  font-weight: 300;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.form-group .form-control {
  -webkit-box-shadow: none;
  border-bottom: 1px;
  border-style: none none solid none;
  border-radius: 0;
  border-color: #000;
}

.form-group .form-control:focus {
  box-shadow: none;
  border-width: 0 0 2px 0;
  border-color: #000;
}

textarea {
  resize: none;
}

.btn-mod.btn-large {
  height: auto;
  padding: 13px 52px;
  font-size: 15px;
}

.btn-mod.btn-border {
  color: white;
  background: #9e9e9e;
}

.btn-mod,
a.btn-mod {
  box-sizing: border-box;
  padding: 4px 13px;
  color: #fff;
  background: rgba(34, 34, 34, 0.9);
  border: 1px solid transparent;
  font-size: 11px;
  font-weight: 400;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 2px;
  border-radius: 0;
  box-shadow: none;
  -webkit-transition: all 0.2s cubic-bezier(0, 0, 0.58, 1);
  transition: all 0.2s cubic-bezier(0, 0, 0.58, 1);
}

.btn-mod.btn-border:hover,
.btn-mod.btn-border:active,
.btn-mod.btn-border:focus,
.btn-mod.btn-border:active:focus {
  color: #fff;
  background: #d3d3d3;
  outline: none;
}

@media only screen and (max-width: 500px) {
  .btn-mod.btn-large {
    padding: 6px 16px;
    font-size: 11px;
  }

  .form-title {
    font-size: 20px;
  }
  #mainBar {
    padding-right: 35px;
    padding-left: 35px;
  }
}

.form-group input {
  background: #e9ecef;
}
/* ... */

